--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "eslint": "^7.24.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -31,5 +32,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "validator": "^13.5.2"
+  }
 }
