--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/validator": "^13.1.3",
@@ -34,6 +35,7 @@
   },
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.5.2"
   }
 }
