--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only src/main/server.ts",
     "eslint:fix": "eslint --fix",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.4",
     "@types/bcrypt": "^3.0.1",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
@@ -40,11 +42,13 @@
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   },
